feat: Добавить /api/exercises
