# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\AuthController;
+use App\Http\Controllers\Api\ExerciseController;
 use App\Http\Middleware\ValidateTelegramWebAppData;
 use Illuminate\Support\Facades\Route;
 
@@ -10,6 +11,10 @@ Route::post('auth', AuthController::class)
         ValidateTelegramWebAppData::class,
     ])
     ->name('api.auth');
+
+Route::get('exercises', ExerciseController::class)
+    ->middleware('auth:sanctum')
+    ->name('api.exercises.index');
 
 require base_path('app/WorkoutPlanning/Presentation/Routes/api.php');
 require base_path('app/WorkoutExecution/Presentation/Routes/api.php');
